# vimwm

./: Cargo.toml  LICENSE  README.md
defaults/: config.toml
helpers/: click.swift  cursor.swift  key.swift  mouseblock.swift  scroll.swift
src/: cli.rs  helpers.rs  main.rs
src/commands/: bind.rs  gaps.rs  layout.rs  mod.rs  spaces.rs
src/config/: defaults.rs  mod.rs  parser.rs  presets.rs
src/daemon/: lifecycle.rs  mod.rs  pid.rs
src/generators/: mod.rs  skhd.rs  yabai.rs
