[package]
name = "vimwm"
version = "0.1.0"
edition = "2021"
description = "Vim + i3 style window manager for macOS"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"
